[tool.poetry]
name = "comp4920-summary"
version = "0.1.0"
description = ""
authors = ["Maddy Guthridge <hello@maddyguthridge.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pyhtml-enhanced = "^2.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
